--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -44,6 +44,8 @@
     <string name="less_notification_sounds_5m">5 minutes</string>
 
     <!-- Development Settings -->
+    <!-- Dev Options Enabled by Default -->
+    <string name="show_dev_already_enabled">No Need, Development settings are enabled by default.</string>
     <!-- ADB always notify -->
     <string name="adb_always_notify">Debugging always notify</string>
     <string name="adb_always_notify_summary">Always display a notification when debugging is enabled, even if not connected</string>
