Settings: Expose storage summary text
This commit simply exposes the storage summary text hardcodes to allow
themers to theme them without issue.

Conflicts:
	res/layout/storage_summary.xml
	res/values/projekt_colors.xml

Change-Id: I00ca41cfd0c041cc43d0c2524ffbd2e96350b02d

--- a/res/values/aicp_colors.xml
+++ b/res/values/aicp_colors.xml
@@ -24,4 +24,6 @@
     <color name="white">#FFF</color>
     <color name="aicp_logo_bg">@*android:color/primary_text_material_light</color>
     <color name="aicp_logo_fg">@color/icon_tint_color</color>
+        <!-- Storage Summary Title -->
+    <color name="storage_summary_title_color">#ff607d8b</color>
 </resources>
