--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -406,4 +406,8 @@
     <string name="magisk_title">Magisk Manager</string>
     <string name="magisk_summary">Root management</string>
 
+    <!-- Top Level Substratum settings -->
+    <string name="substratum_title">Substratum</string>
+    <string name="substratum_summary">Customize device theme</string>
+
 </resources>
