Keyguard: Forward port lockscreen quick unlock (2/2)
Change-Id: I9228da9314835458e536cdc2e5f527f4a9c7d23c

--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -284,4 +284,8 @@
 
     <string name="auto_brightness_min_title">Minimal brightness level</string>
     <string name="auto_brightness_description_new">Your screen brightness will automatically adjust to your environment and activities.\n\nYou can adjust a minimal brightness level that will be used.</string>
+
+    <!-- Quick unlock -->
+    <string name="unlock_quick_unlock_control_title">Quick unlock</string>
+    <string name="unlock_quick_unlock_control_summary">Unlock automatically when the correct PIN/password is entered</string>
 </resources>
