--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -256,4 +256,14 @@
     <string name="volume_steps_7">7</string>
     <string name="volume_steps_5">5</string>
 
+   <!-- Manage applications: show substratum overlays -->
+   <string name="filter_substratum_apps">Substratum overlays</string>
+   <string name="menu_show_substratum">Show overlays</string>
+   <string name="menu_hide_substratum">Hide overlays</string>
+
+   <!-- Manage applications: show substratum icon overlays -->
+   <string name="filter_substratum_icons">Substratum icon overlays</string>
+   <string name="menu_show_substratum_icons">Show icon overlays</string>
+   <string name="menu_hide_substratum_icons">Hide icon overlays</string>
+
 </resources>
