--- a/res/values/aicp_colors.xml
+++ b/res/values/aicp_colors.xml
@@ -39,5 +39,6 @@
     
     <color name="dashboard_category_title_background">@color/card_background</color>
     <color name="selectable_card_background">@color/card_background</color>
+    <color name="switchbar_background_color">#ff37474f</color>
     
 </resources>
