--- a/res/values/aicp_colors.xml
+++ b/res/values/aicp_colors.xml
@@ -26,7 +26,7 @@
     <color name="aicp_logo_fg">@color/icon_tint_color</color>
         <!-- Storage Summary Title -->
     <color name="storage_summary_title_color">#ff607d8b</color>
-    
+
         <!-- Condition card colors -->
     <color name="condition_card_background_color">@*android:color/material_deep_teal_500</color>
     <color name="condition_card_icon_color">@*android:color/primary_text_material_dark</color>
@@ -36,8 +36,9 @@
     <color name="condition_card_divider_color">@android:color/white</color>
     <color name="condition_card_first_button_text_color">@*android:color/primary_text_material_dark</color>
     <color name="condition_card_second_button_text_color">@*android:color/primary_text_material_dark</color>
-    
+
     <color name="dashboard_category_title_background">@color/card_background</color>
     <color name="selectable_card_background">@color/card_background</color>
-    
+    <color name="switchbar_background_color">#ff37474f</color>
+
 </resources>
