Settings: Fix condition expand/collapse click on dedicated icon
Commit
http://gerrit.aicp-rom.com/#/c/31229/9/res/layout/condition_card.xml
added too much

Change-Id: I1e62e8bf759e5c4744fefbbf63c7aeb84d3a590a

--- a/res/layout/condition_card.xml
+++ b/res/layout/condition_card.xml
@@ -60,10 +60,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:padding="16dp"
-                android:tint="@color/condition_card_expander_color"
-                android:clickable="true"
-                android:focusable="true"
-                android:background="?android:attr/selectableItemBackground" />
+                android:tint="@color/condition_card_expander_color" />
 
         </LinearLayout>
 
