--- a/res/values-de/aicp_strings.xml
+++ b/res/values-de/aicp_strings.xml
@@ -24,10 +24,6 @@
     <string name="summary_aicp">Custom ROM Anpassungen</string>
     <string name="header_category_aicpextras">Personalisierung</string>
 
-    <!-- Proximity wake -->
-    <string name="proximity_wake_title">Unbeabsichtigtes Aufwachen verhindern</string>
-    <string name="proximity_wake_summary">Schaltet das Display erst ein, wenn der Bewegungssensor überprüft wurde</string>
-
     <!-- Turn on display when power connected; turn off display when power disconnected -->
     <string name="wake_when_plugged_or_unplugged_title">Beim Anschließen aufwachen</string>
     <string name="wake_when_plugged_or_unplugged_summary">Schaltet das Display bei Verbindung oder Trennung von einer Stromquelle ein</string>
@@ -260,6 +256,16 @@
     <string name="volume_steps_15">15</string>
     <string name="volume_steps_7">7</string>
     <string name="volume_steps_5">5</string>
+
+    <!-- Manage applications: show substratum overlays -->
+    <string name="filter_substratum_apps">Substratum Überlagerungen</string>
+    <string name="menu_show_substratum">Zeige Überlagerungen</string>
+    <string name="menu_hide_substratum">Verstecke Überlagerungen</string>
+
+    <!-- Manage applications: show substratum icon overlays -->
+    <string name="filter_substratum_icons">Substratum Symbol-Überlagerungen</string>
+    <string name="menu_show_substratum_icons">Zeige Symbol-Überlagerungen</string>
+    <string name="menu_hide_substratum_icons">Verstecke Symbol-Überlagerungen</string>
 
     <!-- Status bar -->
     <string name="smart_pulldown_title">Intelligentes Öffnen</string>
