--- a/res/values-es/cm_strings.xml
+++ b/res/values-es/cm_strings.xml
@@ -16,17 +16,22 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+
   <!-- [CHAR LIMIT=NONE] Device Info screen. Countdown for user taps to enable development settings -->
   <plurals name="show_dev_countdown_cm">
     <item quantity="one">Ahora estás a <xliff:g id="step_count">%1$d</xliff:g> paso de habilitar las opciones de desarrollo.</item>
     <item quantity="other">Ahora estás a <xliff:g id="step_count">%1$d</xliff:g> pasos de habilitar las opciones de desarrollo.</item>
   </plurals>
+
   <!-- [CHAR LIMIT=NONE] Device Info screen. Confirmation that developer settings are enabled -->
   <string name="show_dev_on_cm">¡Has activado los ajustes de desarrollo!</string>
+
   <!-- [CHAR LIMIT=NONE] Device Info screen. Okay we get it, stop pressing, you already have it on -->
   <string name="show_dev_already_cm">No es necesario. Las opciones de desarrollo ya están activadas.</string>
+
   <!-- Launch Dev Tools -->
   <string name="development_tools_title">Herramientas de desarrollo</string>
+
   <!-- Setting checkbox title for root access -->
   <string name="root_access">Acceso administrativo</string>
   <string name="root_access_warning_title">¿Permitir acceso administrativo?</string>
@@ -36,6 +41,8 @@
   <string name="root_access_adb">Solo ADB</string>
   <string name="root_access_all">Aplicaciones y ADB</string>
   <!-- Preference link for root appops -->
+  <string name="root_appops_title">Gestionar accesos root</string>
+  <string name="root_appops_summary">Ver y controlar las reglas de root</string>
   <!-- About phone screen, AICP version -->
   <string name="mod_version">Versión de AICP</string>
   <string name="mod_version_default">Desconocida</string>
@@ -126,6 +133,7 @@
   <string name="app_ops_summaries_start_at_boot">iniciar en el arranque</string>
   <string name="app_ops_summaries_toggle_nfc">alternar NFC</string>
   <string name="app_ops_summaries_superuser">acceso administrativo</string>
+
   <!-- User display names for app ops codes - extension of AOSP -->
   <string name="app_ops_labels_coarse_location">Ubicación aproximada</string>
   <string name="app_ops_labels_fine_location">Ubicación precisa</string>
@@ -195,15 +203,18 @@
   <string name="app_ops_labels_start_at_boot">Iniciar en el arranque</string>
   <string name="app_ops_labels_toggle_nfc">Alternar NFC</string>
   <string name="app_ops_labels_superuser">Acceso administrativo</string>
+
   <!-- App ops permissions -->
   <string name="app_ops_permissions_allowed">Permitido</string>
   <string name="app_ops_permissions_ignored">Ignorado</string>
   <string name="app_ops_permissions_always_ask">Preguntar siempre</string>
+
   <!-- App ops detail -->
   <string name="app_ops_entry_summary"><xliff:g id="op">%1$s</xliff:g> (usado <xliff:g id="count">%2$s</xliff:g>)</string>
   <string name="app_ops_allowed_count">Permitido <xliff:g id="count" example="2 times">%s</xliff:g></string>
   <string name="app_ops_ignored_count">Denegado <xliff:g id="count" example="2 times">%s</xliff:g></string>
   <string name="app_ops_both_count">Permitido <xliff:g id="count">%1$s</xliff:g>, denegado <xliff:g id="count">%2$s</xliff:g></string>
+
   <!-- App ops menu options -->
   <string name="app_ops_show_user_apps">Aplicaciones de usuario</string>
   <string name="app_ops_show_system_apps">Aplicaciones de sistema</string>
@@ -211,12 +222,17 @@
   <string name="app_ops_reset_confirm_title">Confirmar el restablecimiento de contadores</string>
   <string name="app_ops_reset_confirm_mesg">¿Estás seguro de que deseas restablecer los contadores?</string>
   <string name="ok">Aceptar</string>
+
   <!-- Volume settings - Volume adjustment sound -->
   <string name="volume_adjust_sounds_title">Sonidos de ajuste de volumen</string>
+
   <!-- Vibrator intensity -->
   <string name="vibrator_intensity_title">Intensidad de vibración</string>
+  <string name="vibrator_intensity_dialog_warning">No se recomiendas valores superiores al %1$d%%</string>
   <string name="vibrator_intensity_dialog_reset">Restablecer</string>
+
   <!-- Sizes for pattern lockscreen -->
+  <string name="lock_settings_picker_pattern_size_message">Elegir tamaño del patrón</string>
   <!-- Whether a visible red line will be drawn after the user has drawn the unlock pattern incorrectly -->
   <string name="lockpattern_settings_enable_error_path_title">Mostrar patrón erróneo</string>
   <!-- Whether the dots will be drawn when using the lockscreen pattern -->
@@ -229,19 +245,29 @@
   <string name="lock_directly_show_pin">Mostrar directamente la entrada PIN</string>
   <!-- Lock screen vibrate settings -->
   <string name="lockscreen_vibrate_enabled_title">Vibración</string>
+  <string name="lockscreen_vibrate_enabled_head">Vibrar al desbloquear</string>
+
   <!-- Lights settings -->
   <string name="lights_label">Luces</string>
+
   <!-- Memory -->
   <string name="memory_startup_apps_title">Aplicaciones iniciadas en el arranque</string>
+
   <!-- Advanced restart options -->
+  <string name="advanced_reboot_title">Reinicio avanzado</string>
+  <string name="advanced_reboot_summary">Cuando el dispositivo está desbloqueado muestra las opciones para reiniciar en modo recovery, bootloader o reinicio rápido en el menú de apagado</string>
+
   <!-- PIN scramble -->
   <string name="unlock_scramble_pin_layout_title">Disposición aleatoria</string>
   <string name="unlock_scramble_pin_layout_summary">Cambiar la disposición de los números del PIN para desbloquear el dispositivo</string>
+
   <!-- lock screen visualizer -->
   <string name="lockscreen_visualizer_title">Mostrar visualizador musical</string>
+
   <!-- Protected apps lockpattern reset button -->
   <string name="lockpattern_reset_button">Restablecer patrón</string>
   <string name="lockpattern_settings_reset_summary">Introducir la cuenta de correo principal y su contraseña asociada para restablecer el patrón de bloqueo</string>
+
   <!-- Protected Apps -->
   <string name="menu_hidden_apps_delete">Restablecer</string>
   <string name="menu_hidden_apps_reset_lock">Restablecer patrón de bloqueo</string>
@@ -254,67 +280,110 @@
   <string name="pa_login_checking_password">Comprobando cuenta\u2026</string>
   <string name="pa_login_incorrect_login">El inicio de sesión fue incorrecto</string>
   <string name="pa_pattern_or_fingerprint_header">Debes dibujar el patrón o utilizar huellas digitales para desbloquear</string>
+
   <!-- title for lock screen weather preference -->
   <string name="lockscreen_weather_enabled_title">Mostrar el clima</string>
-  <!-- title for lock screen blur preference -->
+
   <!-- Proximity wake -->
   <string name="proximity_wake_title">Prevenir encendido accidental</string>
+  <string name="proximity_wake_summary">Comprobar el sensor de proximidad antes de despertar el dispositivo con gestos</string>
+
   <!-- High touch sensitivity -->
   <string name="high_touch_sensitivity_title">Alta sensibilidad táctil</string>
   <string name="high_touch_sensitivity_summary">Incrementar la sensibilidad del panel táctil para que pueda usarse llevando guantes</string>
+
   <!-- Touchscreen hovering -->
   <string name="touchscreen_hovering_title">Pantalla táctil deslizante</string>
   <string name="touchscreen_hovering_summary">Te permitirá deslizar por la pantalla como un ratón en navegadores, escritorios remotos, etc.</string>
+
   <!-- Whether to display IME switcher notifcation -->
+  <string name="ime_switcher_notify">Notificación de selección</string>
+  <string name="ime_switcher_notify_summary">Muestra una notificación de selección de método de entrada</string>
+
   <!-- [CHAR LIMIT=100] Notification Importance slider: very low importance level description -->
+  <string name="notification_importance_very_low">Sin vibración ni sonido cuando se está en modo pantalla completa. Mostrar al final de la lista de notificaciones. Ocultar en pantalla de bloqueo.</string>
+
   <!-- Stylus Icon -->
   <string name="stylus_icon_enabled_title">Mostrar el icono al usar el Stylus</string>
   <string name="stylus_icon_enabled_summary">Mostrar el cursor cuando se arrastra o dibuja con el Stylus</string>
+
+  <string name="interruptions_ignore_while_media_title">Prevenir interrupción de audio</string>
+  <string name="interruptions_ignore_while_media_summary">No disminuye el volumen de la música en reproducción cuando llega una notificación</string>
+
   <!-- Kill app long-press back -->
   <string name="kill_app_longpress_back">Botón atrás para cerrar la aplicación</string>
   <string name="kill_app_longpress_back_summary">Finalizar la aplicación actual al mantener pulsado el botón atrás</string>
+
   <!-- Android debugging -->
   <string name="enable_adb_cm">Depuración de Android</string>
+
   <!-- Android debugging notification -->
   <string name="adb_notify">Notificación de depuración</string>
   <string name="adb_notify_summary">Mostrar una notificación cuando esté activada la depuración por USB o red</string>
+
   <!-- Android debugging over network -->
   <string name="adb_over_network">ADB sobre red</string>
   <string name="adb_over_network_summary">Activar la depuración TCP/IP sobre las interfaces de red (Wi\u2011Fi, redes USB). Esta configuración se restablece al reiniciar el dispositivo</string>
   <string name="adb_over_network_warning">ADVERTENCIA: Cuando ADB sobre red está activado, el dispositivo está abierto para intrusiones en todas las redes conectadas.\n\nUtiliza esta función solamente cuando estés conectado a redes de confianza.\n\n¿Realmente deseas activar esta función?</string>
+
   <!-- Increasing ring tone volume -->
   <string name="increasing_ring_volume_option_title">Volumen de timbre ascendente</string>
   <string name="increasing_ring_min_volume_title">Volumen inicial</string>
   <string name="increasing_ring_ramp_up_time_title">Tiempo de incremento</string>
+
   <!-- Allow vibration in zen mode -->
+  <string name="zen_mode_vibration">Vibración</string>
+  <string name="zen_mode_vibration_never">Sin vibración</string>
+  <string name="zen_mode_vibration_calls_only">Sólo vibrar con llamadas</string>
+  <string name="zen_mode_vibration_calls_and_notifications">Vibrar con llamadas y notificaciones</string>
+
   <!-- Notification sound timeout -->
+  <string name="app_notification_sound_timeout_title">Intervalo de tiempo entre sonidos de notificación</string>
+  <string name="app_notification_sound_timeout_summary_template">No permitir sonido y vibración más de una vez cada<xliff:g id="duration">%1$s</xliff:g></string>
+  <string name="app_notification_sound_timeout_value_none">Sin restricciones</string>
+  <string name="app_notification_sound_timeout_value_10_seconds">10 segundos</string>
+  <string name="app_notification_sound_timeout_value_30_seconds">30 segundos</string>
+  <string name="app_notification_sound_timeout_value_1_minute">1 minuto</string>
+  <string name="app_notification_sound_timeout_value_5_minutes">5 minutos</string>
+  <string name="app_notification_sound_timeout_value_15_minutes">10 minutos</string>
+  <string name="app_notification_sound_timeout_value_30_minutes">30 minutos</string>
+
   <!-- MSIM SIM status -->
   <string name="sim_card_status_title">Estado de SIM %d</string>
   <string name="sim_card_lock_settings_title">Ajustes de bloqueo de SIM %d</string>
   <string name="sim_card_summary_empty">Tarjeta SIM no insertada</string>
   <string name="sim_mobile_network_settings_category_title">Ajustes de red móvil</string>
   <string name="sim_mobile_network_settings_title">Ajustes de la tarjeta SIM %d</string>
+
   <!-- NFC PreferenceCategory title -->
   <string name="nfc_title_category">NFC</string>
+
   <!-- Notification importance -->
-  <!-- CM Legal -->
-  <string name="cmlicense_title">Licencia de CyanogenMod</string>
+  <string name="tuner_full_importance_settings">Controles de notificación de energía</string>
+
   <!-- Format string for fingerprint location message -->
   <string name="security_settings_fingerprint_enroll_find_sensor_message_cm">Localiza el sensor de huella digital en el <xliff:g id="sensor_location">%1$s </xliff:g> de su teléfono.</string>
+
   <!-- Fingerprint sensor locations -->
   <string name="security_settings_fingerprint_sensor_location_back">posterior</string>
   <string name="security_settings_fingerprint_sensor_location_front">delante</string>
   <string name="security_settings_fingerprint_sensor_location_left">lado izquierdo</string>
   <string name="security_settings_fingerprint_sensor_location_right">lado derecho</string>
+
   <!-- Tethering & portable hotspot other category -->
   <string name="tethering_other_category_text">Otros</string>
+
   <!-- Wi-Fi tethering inactivity timeout -->
   <string name="hotstpot_inactivity_timeout_text">Tiempo de espera del punto de acceso Wi\u2011Fi</string>
   <string name="hotstpot_inactivity_timeout_never">Nunca</string>
   <string name="hotstpot_inactivity_timeout_1_minute">1 minuto</string>
   <string name="hotstpot_inactivity_timeout_5_minutes">5 minutos</string>
   <string name="hotstpot_inactivity_timeout_10_minutes">10 minutos</string>
+  <string name="hotstpot_inactivity_timeout_never_summary_text">Tiempo de espera nunca del punto de acceso Wi\u2011Fi</string>
+  <string name="hotstpot_inactivity_timeout_summary_text">Tiempo de espera del punto de acceso Wi\u2011Fi:<xliff:g id="timeout">%1$s</xliff:g></string>
+
   <!-- Wake on plug -->
   <string name="wake_when_plugged_or_unplugged_title">Encender al conectar el cargador</string>
-  <!-- Heads-up -->
+  <string name="wake_when_plugged_or_unplugged_summary">Enciende la pantalla cuando se conecta o desconecta un cargador</string>
+
 </resources>
