Couple of grammar/capitalization fixes.
English US only for now as I don't want to touch any other translation
files due to the fact that I don't really know any other languages.

Change-Id: Id1e28a3b2aab79e086a1f1eb88fb57e1d30a636b
Signed-off-by: Kamran Mackey <kamranm1200@gmail.com>

--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
      Copyright (C) 2016 AICP
 
@@ -21,7 +21,7 @@
 
     <!-- Aicp Extras -->
     <string name="aicpextras_settings">AICP Extras</string>
-    <string name="summary_aicp">Custom rom personalizations</string>
+    <string name="summary_aicp">Custom ROM personalizations</string>
     <string name="header_category_aicpextras">Personalization</string>
 
     <!-- Turn on display when power connected; turn off display when power disconnected -->
@@ -100,7 +100,7 @@
     <string name="profile_applist_title">Applications</string>
     <string name="default_string">Default</string>
     <string name="reset">Reset</string>
-    <string name="summary_navbar">Smartbar/fling and pulse</string>
+    <string name="summary_navbar">Smartbar/Fling and Pulse</string>
 
     <!-- Actions dialog and default task values set in ActionPreference xml-->
     <string name="choose_action_title">Choose action</string>
