--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
      Copyright (C) 2016 AICP
 
@@ -100,7 +100,7 @@
     <string name="profile_applist_title">Applications</string>
     <string name="default_string">Default</string>
     <string name="reset">Reset</string>
-    <string name="summary_navbar">Smartbar/Fling and Pulse</string>
+    <string name="summary_navbar">Smartbar/Fling and the Pulse visualizer</string>
 
     <!-- Actions dialog and default task values set in ActionPreference xml-->
     <string name="choose_action_title">Choose action</string>
