Added CPU and Memory information.
Different take on Pranav Cherukupalli's commit, but this commit only
adds CPU and RAM information, so everything should work just fine
(hopefully). Needs some testing to make sure it works before it can be
merged, however, but I am unable to test due to having no access to a
Linux machine right now.

Change-Id: I6322d3004339906c28a6f59bf6fce362be687bab
Signed-off-by: Kamran Mackey <kamranm1200@gmail.com>

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -70,6 +70,12 @@
     <string name="build_date">Build date</string>
     <string name="build_date_default">2015-01-01-0000</string>
 
+    <!-- About phone screen, processor info -->
+    <string name="processor_info">Processor</string>
+
+    <!-- About phone screen, memory info -->
+    <string name="memory_info">Memory</string>
+
     <!-- CM Updater -->
     <string name="cmupdate_settings_title">CyanogenMod updates</string>
 
