--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -266,7 +266,7 @@
     <string name="menu_show_substratum_icons">Show icon overlays</string>
     <string name="menu_hide_substratum_icons">Hide icon overlays</string>
 
-    <!-- Navabar dynamic color -->
+    <!-- Navbar dynamic color -->
     <string name="nav_bar_dynamic_title">Dynamic navbar color</string>
     <string name="nav_bar_dynamic_summary">Enables the navbar to adapt app\'s primary dark color. Restart your desired app to see effect.</string>
 
