Add HwInfo base activity
Change-Id: I8882c2b9b5e036ab75ae4edf4fbead483f7c5fb6

--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -273,4 +273,8 @@
     <!-- setting: show CPU info-->
     <string name="show_cpu_info">Show CPU info</string>
     <string name="show_cpu_info_summary">Screen overlay showing current CPU info</string>
+
+    <!-- setting: show CPU info-->
+    <string name="aicp_hwinfo_title">Hardware info</string>
+
 </resources>
