Add back hardware info to Settings
The following keys and their values should be present in build.prop

ro.device.chipset
ro.device.cpu
ro.device.gpu
ro.device.front_cam
ro.device.rear_cam
ro.device.screen_res

AICPfy:
- Move to our HwInfo separate class

Change-Id: Ic1695ae0a5ca6731f571048109e488939568389f

--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -276,5 +276,12 @@
 
     <!-- setting: show CPU info-->
     <string name="aicp_hwinfo_title">Hardware info</string>
+    <string name="chipset_info">Chipset</string>
+    <string name="device_rear_camera">Rear camera</string>
+    <string name="device_front_camera">Front facing camera</string>
+    <string name="device_screen_resolution">Screen resolution</string>
+    <string name="gpu_info">GPU</string>
+    <string name="cpu_info">CPU</string>
+    <string name="mem_info">Memory</string>
 
 </resources>
