--- a/res/values-es/aicp_strings.xml
+++ b/res/values-es/aicp_strings.xml
@@ -264,4 +264,14 @@
    <string name="show_cpu_info">Información de CPU</string>
    <string name="show_cpu_info_summary">Muestra la información actual de la CPU en pantalla</string>
 
+   <!-- setting: show CPU info-->
+   <string name="aicp_hwinfo_title">Información de Hardware</string>
+   <string name="chipset_info">Chipset</string>
+   <string name="device_rear_camera">Cámara trasera</string>
+   <string name="device_front_camera">Cámara frontal</string>
+   <string name="device_screen_resolution">Resolución de pantalla</string>
+   <string name="gpu_info">GPU</string>
+   <string name="cpu_info">CPU</string>
+   <string name="mem_info">Memoria</string>
+
 </resources>
