Added summary for hardware information.
Change-Id: I13783dfc96f44d7093879b04f43c359af4e9ac9a
Signed-off-by: Kamran Mackey <kamranm1200@gmail.com>

--- a/res/xml/aicp_hwinfo.xml
+++ b/res/xml/aicp_hwinfo.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                   xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
-        android:title="@string/aicp_hwinfo_title" >
+        android:title="@string/aicp_hwinfo_title"
+	android:summary="@string/aicp_hwinfo_summary" >
 
     <!-- Device Chipset info -->
     <Preference android:key="device_chipset"
