Night Light brightness mode options [2/2]
Squash of:
Move Night light brightness options to Settings [2/2]
Night tile: automatically set a lower brightness when active [2/2]
Night mode tile brightness: allow to set a different value [2/2]
Wider night light auto low brightness action [2/2]

@BeansTown106 edits:
*cleaned up java a bit remove unused imports and moved int defines
*followed googles xml based coding and added a category
*changed from a list preference to dropdown preference
*added a wall of text preference describing the modification
*removed references to qs from strings and slimmed down text a bit

@nathanchance edit: changed array values because 3 as disabled makes NO sense. Disabled by default.

Change-Id: I94c3ceee74ae60c9424f4fb384867f89c969abb9

--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -389,4 +389,12 @@
     <string name="double_tap_wake_doze_title">Double-tap to wake on doze</string>
     <string name="double_tap_wake_doze_summary">Require a double-tap to wake the device on a doze pulse screen</string>
 
+    <!-- Advanced night mode brightness -->
+    <string name="night_brightness_category">Brightness</string>
+    <string name="night_brightness_value_title">Night Light brightness</string>
+    <string name="night_brightness_text">When Night Light is enabled, automatically set the desired brightness.</string>
+    <string name="night_bright_disabled">Disabled</string>
+    <string name="night_bright_min">Minimum brightness</string>
+    <string name="night_bright_low">Low brightness</string>
+    <string name="night_bright_medium">Medium brightness</string>
 </resources>
