Development Settings: Add QS to toggle Disable HW Overlays
Change-Id: I01931e9a12b9c87aa48a60ce7a08672873b22c78

--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -306,4 +306,6 @@
     <string name="selinux_enforcing_title">Enforcing</string>
     <string name="selinux_permissive_toast_title">Selinux set to permissive!</string>
 
+    <!-- Development QS -->
+    <string name="qs_disable_hw_overlays">@string/disable_overlays</string>
 </resources>
