Development Settings: Add QS to toggle Show touches
Change-Id: I91aac9308ae6dd90e3da6ccdacfee95363c4aa31

--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -308,4 +308,5 @@
 
     <!-- Development QS -->
     <string name="qs_disable_hw_overlays">@string/disable_overlays</string>
+    <string name="qs_show_touches">@string/show_touches</string>
 </resources>
