Settings: Add preference for EdgeGesture service.
Change-Id: I0325b0a9aa6eb943b48483aebe151726a2c64ac4

--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -309,4 +309,8 @@
     <!-- Development QS -->
     <string name="qs_disable_hw_overlays">@string/disable_overlays</string>
     <string name="qs_show_touches">@string/show_touches</string>
+
+    <!-- EdgeGesture service -->
+    <string name="edge_gesture_service_title">Block gesture touch events</string>
+    <string name="edge_gesture_service_summary">Don\'t send touch events for navigation and status bar gestures to apps</string>
 </resources>
