--- a/res/xml/development_prefs.xml
+++ b/res/xml/development_prefs.xml
@@ -257,7 +257,7 @@
             android:title="@string/pointer_location"
             android:summary="@string/pointer_location_summary"/>
 
-        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
+        <cyanogenmod.preference.SystemSettingSwitchPreference
             android:key="edge_service_for_gestures"
             android:title="@string/edge_gesture_service_title"
             android:summary="@string/edge_gesture_service_summary"
