--- a/res/values/aicp_dimens.xml
+++ b/res/values/aicp_dimens.xml
@@ -31,4 +31,7 @@
     <!-- Shortcut picker -->
     <dimen name="shortcut_picker_left_padding">70dip</dimen>
 
+    <!-- dashboard category padding bottom  -->
+    <dimen name="dashboard_category_padding_bottom">8dip</dimen>
+
 </resources>
