--- a/res/values/aicp_colors.xml
+++ b/res/values/aicp_colors.xml
@@ -58,4 +58,8 @@
 
     <!-- External Icon Tint -->
     <color name="external_tile_icon_tint_color">?android:attr/colorAccent</color>
+
+    <!-- Settings switchbar background -->
+    <color name="switchbar_background_color">?android:attr/colorSecondary</color>
+
 </resources>
