--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -85,18 +85,10 @@
                 android:key="lift_to_wake"
                 android:title="@string/lift_to_wake_title" />
 
-        <SwitchPreference
-                android:key="doze"
+        <PreferenceScreen
+                android:key="doze_fragment"
                 android:title="@string/doze_title"
-                android:summary="@string/doze_summary" />
-
-        <cyanogenmod.preference.RemotePreference
-                android:key="doze_device_settings"
-                android:title="@string/doze_title"
-                android:summary="@string/doze_summary"
-                cm:replacesKey="doze">
-            <intent android:action="org.cyanogenmod.settings.device.DOZE_SETTINGS" />
-        </cyanogenmod.preference.RemotePreference>
+                android:fragment="com.android.settings.aicp.AmbientSettings" />
 
         <SwitchPreference
                 android:key="tap_to_wake"
